Improve Decoder