@@ -42,14 +42,12 @@ dependencies {
 
 compileJava {
     options.compilerArgs.addAll([
-        "--add-exports", "java.base/sun.security.pkcs=java.simple.security",
         "--add-exports", "java.base/sun.security.util=java.simple.security",
         "--add-exports", "java.base/sun.security.x509=java.simple.security"
     ])
 }
 compileTestJava {
     options.compilerArgs.addAll([
-        "--add-exports", "java.base/sun.security.pkcs=ALL-UNNAMED",
         "--add-exports", "java.base/sun.security.util=ALL-UNNAMED",
         "--add-exports", "java.base/sun.security.x509=ALL-UNNAMED"
     ])
@@ -58,7 +56,6 @@ compileTestJava {
 tasks.withType(Test).configureEach {
     useJUnitPlatform()
     jvmArgs (
-        "--add-exports", "java.base/sun.security.pkcs=ALL-UNNAMED",
         "--add-exports", "java.base/sun.security.util=ALL-UNNAMED",
         "--add-exports", "java.base/sun.security.x509=ALL-UNNAMED"
     )
